--- a/scss/modules/_posts.scss
+++ b/scss/modules/_posts.scss
@@ -1,10 +1,18 @@
 .posts {
 	color: $white;
-	padding: 80px 0;
 
+	@include breakpoint ($small) {
+		padding: 30px 0 50px 0;
+	}
+		
+	@include breakpoint ($large) {
+		padding: 80px 0;
+	}
+	
 	&--padding {
 		padding: 50px 0;
 	}
+	
 	
 	.post {
 		max-width: 407px;
@@ -21,25 +29,58 @@
 		}
 
 		&__img {
-			width: 407px;
-			height: 250px;
+			width: 100%;
 			padding: 0 18px;
 			position: absolute;
 			left: 0;
-			bottom: 0;
+			top: 0;
 			z-index: -2;
+
+			@include breakpoint ($small) {
+				height: 200px;
+			}
+		
+			@include breakpoint ($medium) {
+				height: 250px;
+			}
 		}
 
 		&__info {
 			text-align: center;
-			margin-top: 40px;
 			margin-bottom: 20px;
+
+			@include breakpoint ($small) {
+				margin-top: 20px;
+			}
+		
+			@include breakpoint ($medium) {
+				margin-top: 40px;
+			}
 		}
 
 		&__title {
 			border-top: 2px dotted $blue;
 			margin: 0 40px;
 			padding-top: 15px;
+
+			@include breakpoint ($small) {
+				font-size: 1.25rem;
+			}
+		
+			@include breakpoint ($medium) {
+				font-size: 1.5rem;
+			}
+		}
+
+		&--align {
+			@include breakpoint ($small) {
+				margin-left: auto;
+				margin-right: auto;
+			}
+		
+			@include breakpoint ($large) {
+				margin: 0;
+			}
 		}
 	}
 }
