--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -7,6 +7,7 @@ $light-grey: #8c8c8c;
 $dark-grey: #474747;
 $gradient: linear-gradient(to bottom, rgba(114,175,211,1) 0%, rgba(55,236,186,1) 100%);
 $light-gradient: linear-gradient(to bottom, rgba(114,208,218,1) 0%, rgba(98,229,213,1) 100%);
+$btn-gradient: linear-gradient(to bottom, rgba(55,236,186,1) 0%, rgba(114,175,211,1) 100%);
 
 
 
