--- a/scss/modules/_burger.scss
+++ b/scss/modules/_burger.scss
@@ -14,8 +14,8 @@ $button-color: $white;
   padding-bottom: 1rem;
   padding-top: 1rem;
   z-index: 3;
-  right: 30px;
   top: 25px;
+  right: 0;
 
   &:hover {
     cursor: pointer;
