--- a/scss/modules/_posts.scss
+++ b/scss/modules/_posts.scss
@@ -15,34 +15,27 @@
 	
 	
 	.post {
-		max-width: 407px;
-		min-height: 230px;
 		position: relative;
 		overflow: hidden;
 
 		@include breakpoint ($small) {
 			margin-top: 30px;
+			padding-bottom: 50px;
 		}
-		
+
 		@include breakpoint ($large) {
 			margin-top: 0;
+			padding-bottom: 60px;
 		}
 
 		&__img {
 			width: 100%;
+			max-height: 225px;
 			padding: 0 18px;
 			position: absolute;
 			left: 0;
 			top: 0;
 			z-index: -2;
-
-			@include breakpoint ($small) {
-				height: 200px;
-			}
-		
-			@include breakpoint ($medium) {
-				height: 250px;
-			}
 		}
 
 		&__info {
@@ -54,6 +47,14 @@
 			}
 		
 			@include breakpoint ($medium) {
+				margin-top: 40px;
+			}
+
+			@include breakpoint ($large) {
+				margin-top: 10px;
+			}
+
+			@include breakpoint ($xlarge) {
 				margin-top: 40px;
 			}
 		}
